# StorageAI

./: AI_CONTEXT.md  CHANGELOG.md  DONE.md  README.md  TODO.md  VERSION.md
Engineering/: DEFINITION_OF_DONE.md  DOCUMENT_INDEX.md
Engineering/Prompts/: PROMPT-001-Workspace-Setup.md  PROMPT-002-Scanner-Errors.md  PROMPT-003_Scanner_Foundation.md  PROMPT-004_Application_Shell.md  PROMPT-005_Tauri_Commands.md
Engineering/Specs/: SPEC-001_Filesystem-Walker.md  SPEC-002_Application-Shell.md
ProjectBrain/: CHANGELOG.md  MASTER_INDEX.md  PRD.md
ProjectBrain/Architecture/: ARCHITECTURE.md  DATABASE.md
ProjectBrain/Engineering/: DECISIONS.md  ENGINEERING_STANDARDS.md  TECH_STACK.md
apps/desktop/: package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/src/: App.css  App.tsx  constants.ts
apps/desktop/src-tauri/: Cargo.toml  storageai.db  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  constants.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/database/: mod.rs  repository.rs  sqlite.rs
apps/desktop/src-tauri/src/models/: file_record.rs  mod.rs
apps/desktop/src-tauri/src/scanner/: mod.rs  progress.rs  scan.rs  types.rs  walker.rs
apps/desktop/src/components/common/: Button.tsx
apps/desktop/src/components/scanner/: ScanButton.tsx
apps/desktop/src/hooks/: useScanProgress.ts
apps/desktop/src/types/: progress.ts  scanner.ts
