[package]
name = "storageai"
version = "0.1.0"
description = "Intelligent local-first storage management desktop application."
authors = ["StorageAI Technologies"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "storageai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }
